[gd_scene load_steps=58 format=3 uid="uid://cs2ru0s186hhg"]

[ext_resource type="Script" uid="uid://dfas40y1xdc0k" path="res://scenes/battle/battle.gd" id="1_n6gaa"]
[ext_resource type="Texture2D" uid="uid://d22ubd1nk1ird" path="res://assets/sprites/UI_avatar_test.png" id="2_6ofp8"]
[ext_resource type="Script" uid="uid://bbdpyr8inju5f" path="res://resources/districts/district_data.gd" id="2_fe4ja"]
[ext_resource type="Texture2D" uid="uid://dpfpj5ttarrql" path="res://assets/sprites/UI_avatar_player_test.png" id="3_mvulk"]
[ext_resource type="Resource" uid="uid://h1sq56k5rsq4" path="res://resources/districts/armory.tres" id="3_sgdsx"]
[ext_resource type="Resource" uid="uid://culfm22xp2n4" path="res://resources/districts/barracks.tres" id="4_5moxy"]
[ext_resource type="Texture2D" uid="uid://b88ta1bgrnaq3" path="res://assets/sprites/ability_holder_test.png" id="4_w40i5"]
[ext_resource type="Resource" uid="uid://contlwpmvss74" path="res://resources/districts/castle.tres" id="5_156m4"]
[ext_resource type="Texture2D" uid="uid://bfnakpa755cne" path="res://assets/sprites/assassin_ability_avatar.png" id="5_fe4ja"]
[ext_resource type="Resource" uid="uid://c7fyclwrr711x" path="res://resources/districts/cathedrel.tres" id="6_ilhaa"]
[ext_resource type="Texture2D" uid="uid://cya4nrcrt6217" path="res://assets/sprites/UI-Buttons-Test.png" id="6_sgdsx"]
[ext_resource type="PackedScene" uid="uid://i0ct1ej7b2pm" path="res://assets/3D/create_a_battlefield__0614155941_texture.glb" id="7_5moxy"]
[ext_resource type="Resource" uid="uid://dxuxvnuurmng7" path="res://resources/districts/church.tres" id="7_v3sqs"]
[ext_resource type="Script" uid="uid://bnexkr8l0w1qr" path="res://addons/card_3d/scripts/drag_controller.gd" id="8_156m4"]
[ext_resource type="Resource" uid="uid://d3hh60bjd0hq3" path="res://resources/districts/docks.tres" id="8_m7fqn"]
[ext_resource type="Resource" uid="uid://dbbcqtgqb0qqr" path="res://resources/districts/fortress.tres" id="9_j021e"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="9_pyfix"]
[ext_resource type="Script" uid="uid://c1o3okxoatrri" path="res://addons/card_3d/scenes/deck.gd" id="10_8eh2s"]
[ext_resource type="Resource" uid="uid://bot5w3cgjrvdh" path="res://resources/districts/hospital.tres" id="10_eu6pb"]
[ext_resource type="Script" uid="uid://cntqyqc32apyx" path="res://addons/card_3d/scripts/card_layouts/pile_card_layout.gd" id="11_e48mi"]
[ext_resource type="Resource" uid="uid://1def4a4ctktc" path="res://resources/districts/imperial_treasure.tres" id="11_fagrh"]
[ext_resource type="Resource" uid="uid://bdb80smbqigjr" path="res://resources/districts/keep.tres" id="12_pqmvt"]
[ext_resource type="Script" uid="uid://ct2885umh1ou2" path="res://addons/card_3d/scenes/hand.gd" id="12_ueicy"]
[ext_resource type="Script" uid="uid://dhlf23ahp2k1e" path="res://addons/card_3d/scripts/card_layouts/fan_card_layout.gd" id="13_n5ix6"]
[ext_resource type="Resource" uid="uid://bjo7nit74mm76" path="res://resources/districts/lighthouse.tres" id="13_t60p8"]
[ext_resource type="Resource" uid="uid://djtckypk5elsm" path="res://resources/districts/manor.tres" id="14_kwbff"]
[ext_resource type="Script" uid="uid://cl6u4twl67b6w" path="res://addons/card_3d/scripts/card_layouts/line_card_layout.gd" id="14_tnndc"]
[ext_resource type="PackedScene" uid="uid://cviptf2wh1pc0" path="res://addons/card_3d/example_solitaire/scenes/pile_marker.tscn" id="15_k6ux7"]
[ext_resource type="Resource" uid="uid://dog3ox055j4i5" path="res://resources/districts/map_room.tres" id="15_xg1ve"]
[ext_resource type="Script" uid="uid://ccf6pfyo8xdm3" path="res://addons/card_3d/example_solitaire/scripts/stack_layout.gd" id="16_1oulw"]
[ext_resource type="Resource" uid="uid://cc2jgi37r8q3d" path="res://resources/districts/market.tres" id="16_dgo2i"]
[ext_resource type="Resource" uid="uid://cndr42n76n8mb" path="res://resources/districts/montastery.tres" id="17_d046s"]
[ext_resource type="Resource" uid="uid://b4v5oa452ab42" path="res://resources/districts/necropolis.tres" id="18_mdvv0"]
[ext_resource type="Resource" uid="uid://by1gwrxeljrxg" path="res://resources/districts/palace.tres" id="19_lq6ex"]
[ext_resource type="Resource" uid="uid://b0i64xm1e2qc7" path="res://resources/districts/park.tres" id="20_03xte"]
[ext_resource type="Resource" uid="uid://dgqp4vmvxxl0d" path="res://resources/districts/poor_house.tres" id="21_36ceb"]
[ext_resource type="Resource" uid="uid://d17rqqkuypdqv" path="res://resources/districts/prison.tres" id="22_e1v6h"]
[ext_resource type="Resource" uid="uid://pt8rcrjy58u6" path="res://resources/districts/school_of_magic.tres" id="23_1cukx"]
[ext_resource type="Resource" uid="uid://dqepjibqn4jpu" path="res://resources/districts/tavern.tres" id="24_wlmsd"]
[ext_resource type="Resource" uid="uid://cnxnaqnmd2mmp" path="res://resources/districts/temple.tres" id="25_ikd0n"]
[ext_resource type="Script" uid="uid://c7tji47b3d4p3" path="res://resources/characters/character_data.gd" id="26_xg1ve"]
[ext_resource type="Resource" uid="uid://bpsi0508knj0v" path="res://resources/characters/architect.tres" id="27_dgo2i"]
[ext_resource type="Resource" uid="uid://cskaoin53a8ap" path="res://resources/characters/assassin.tres" id="28_d046s"]
[ext_resource type="Resource" uid="uid://bdijll6cmpfwb" path="res://resources/characters/bishop.tres" id="29_mdvv0"]
[ext_resource type="Resource" uid="uid://bpv8sb42yc1ad" path="res://resources/characters/king.tres" id="30_lq6ex"]
[ext_resource type="Resource" uid="uid://bju75ixfd7vbd" path="res://resources/characters/magician.tres" id="31_03xte"]
[ext_resource type="Resource" uid="uid://d3ypgi3oxgxgr" path="res://resources/characters/merchant.tres" id="32_36ceb"]
[ext_resource type="Resource" uid="uid://cx82gikqf7y86" path="res://resources/characters/thief.tres" id="33_e1v6h"]
[ext_resource type="Resource" uid="uid://b2qptckr8gwe" path="res://resources/characters/warlord.tres" id="34_1cukx"]

[sub_resource type="Environment" id="Environment_aua20"]
background_mode = 1

[sub_resource type="Resource" id="Resource_eiu4o"]
script = ExtResource("11_e48mi")
pile_y_offset = 0.0
metadata/_custom_type_script = "uid://cntqyqc32apyx"

[sub_resource type="Resource" id="Resource_n6gaa"]
script = ExtResource("13_n5ix6")
metadata/_custom_type_script = "uid://dhlf23ahp2k1e"

[sub_resource type="Resource" id="Resource_qk52r"]
script = ExtResource("13_n5ix6")
metadata/_custom_type_script = "uid://dhlf23ahp2k1e"

[sub_resource type="Resource" id="Resource_aua20"]
script = ExtResource("14_tnndc")

[sub_resource type="Resource" id="Resource_rns6f"]
script = ExtResource("16_1oulw")
distance = 0.8
metadata/_custom_type_script = "uid://ccf6pfyo8xdm3"

[sub_resource type="Resource" id="Resource_n1c4l"]
script = ExtResource("11_e48mi")
pile_y_offset = 0.0
metadata/_custom_type_script = "uid://cntqyqc32apyx"

[sub_resource type="Resource" id="Resource_x1qku"]
script = ExtResource("14_tnndc")
metadata/_custom_type_script = "uid://cl6u4twl67b6w"

[node name="Battle" type="Node3D"]
script = ExtResource("1_n6gaa")
district_resources = Array[ExtResource("2_fe4ja")]([ExtResource("3_sgdsx"), ExtResource("4_5moxy"), ExtResource("5_156m4"), ExtResource("6_ilhaa"), ExtResource("7_v3sqs"), ExtResource("8_m7fqn"), ExtResource("9_j021e"), ExtResource("10_eu6pb"), ExtResource("11_fagrh"), ExtResource("12_pqmvt"), ExtResource("13_t60p8"), ExtResource("14_kwbff"), ExtResource("15_xg1ve"), ExtResource("16_dgo2i"), ExtResource("17_d046s"), ExtResource("18_mdvv0"), ExtResource("19_lq6ex"), ExtResource("20_03xte"), ExtResource("21_36ceb"), ExtResource("22_e1v6h"), ExtResource("23_1cukx"), ExtResource("24_wlmsd"), ExtResource("25_ikd0n")])
character_resources = Array[ExtResource("26_xg1ve")]([ExtResource("27_dgo2i"), ExtResource("28_d046s"), ExtResource("29_mdvv0"), ExtResource("30_lq6ex"), ExtResource("31_03xte"), ExtResource("32_36ceb"), ExtResource("33_e1v6h"), ExtResource("34_1cukx")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aua20")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerSprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(567.9, 478.02)
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_6ofp8")

[node name="PlayerAvatarSprite2D" type="Sprite2D" parent="HUD/PlayerSprite2D"]
texture = ExtResource("3_mvulk")

[node name="AbilityHolderSprite2D" type="Sprite2D" parent="HUD/PlayerSprite2D"]
position = Vector2(-128.167, -10.4333)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_w40i5")

[node name="AbilityAvatarSprite2D" type="Sprite2D" parent="HUD/PlayerSprite2D/AbilityHolderSprite2D"]
texture = ExtResource("5_fe4ja")

[node name="OpponentSprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(567.9, 111.715)
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_6ofp8")

[node name="OpponentAvatarSprite2D" type="Sprite2D" parent="HUD/OpponentSprite2D"]
position = Vector2(5.63402e-05, -72.0334)
rotation = 3.14159
texture = ExtResource("3_mvulk")

[node name="AbilityHolderSprite2D" type="Sprite2D" parent="HUD/OpponentSprite2D"]
position = Vector2(-731.833, 287.967)
rotation = 3.14159
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_w40i5")

[node name="AbilityAvatarSprite2D" type="Sprite2D" parent="HUD/OpponentSprite2D/AbilityHolderSprite2D"]
texture = ExtResource("5_fe4ja")

[node name="GoldOrCardsSprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(106.875, 474.89)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_sgdsx")
region_enabled = true
region_rect = Rect2(231, 300, 671, 149)

[node name="ActivateAbilitySprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(106.875, 432)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_sgdsx")
region_enabled = true
region_rect = Rect2(233, 509, 670, 144)

[node name="EndTurnSprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(1084.69, 627.15)
scale = Vector2(0.175, 0.175)
texture = ExtResource("6_sgdsx")
region_enabled = true
region_rect = Rect2(231, 699, 673, 151)

[node name="AcceptButton" type="Button" parent="HUD"]
visible = false
offset_left = 536.0
offset_top = 359.2
offset_right = 603.0
offset_bottom = 390.2
text = "ACCEPT"

[node name="Lights" type="Node3D" parent="."]

[node name="OmniLight3D" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.1611, 2)
light_color = Color(0.458824, 0.717647, 0.854902, 1)
omni_range = 10.0
omni_attenuation = -0.661

[node name="OmniLight3D2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -13.2416, 3)
light_color = Color(0.407843, 0.235294, 0.647059, 1)
omni_range = 10.0
omni_attenuation = -1.678

[node name="OmniLight3D5" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.4497, -9.62667, 5)
light_color = Color(0.407843, 0.235294, 0.647059, 1)
omni_range = 4.0
omni_attenuation = -2.863

[node name="OmniLight3D6" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.009, -11.3485, 5)
light_color = Color(0.407843, 0.235294, 0.647059, 1)
omni_range = 4.292
omni_attenuation = -2.186

[node name="OmniLight3D7" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5659, 8.63938, 5)
light_color = Color(0.407843, 0.235294, 0.647059, 1)
omni_range = 5.303
omni_attenuation = -2.017

[node name="OmniLight3D8" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.3697, 9.50205, 5)
light_color = Color(0.407843, 0.235294, 0.647059, 1)
omni_range = 4.0
omni_attenuation = -2.694

[node name="OmniLight3D3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.0983, -6.68405, 3)
light_color = Color(0.858824, 0.533333, 0.388235, 1)
omni_attenuation = -1.339

[node name="OmniLight3D4" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.4956, -6.684, 4)
light_color = Color(0.858824, 0.533333, 0.388235, 1)
omni_attenuation = -1.339

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, -7.92664, 10)
shadow_enabled = true
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Battlefield" parent="." instance=ExtResource("7_5moxy")]
transform = Transform3D(25.5301, 0.141727, -9.1348, 0, 19.9981, 0.251319, 15.0384, -0.240604, 15.5078, 0, 0.995, -2)

[node name="PlayerDragController" type="Node3D" parent="."]
script = ExtResource("8_156m4")

[node name="DeckCardCollection" parent="PlayerDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.901, -9.221, -1.235)
script = ExtResource("10_8eh2s")
highlight_on_hover = false
card_layout_strategy = SubResource("Resource_eiu4o")

[node name="HandCardCollection" parent="PlayerDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.252, 0)
script = ExtResource("12_ueicy")
card_layout_strategy = SubResource("Resource_n6gaa")

[node name="InPlayCardCollection" parent="PlayerDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.423, 2)

[node name="EmptyDeck" parent="PlayerDragController" instance=ExtResource("15_k6ux7")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -16.901, -9.221, -1.07)
visible = false
skeleton = NodePath("../..")

[node name="OpponentDragController" type="Node3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("8_156m4")

[node name="DeckCardCollection" parent="OpponentDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.114, -8.721, -0.71)
script = ExtResource("10_8eh2s")
highlight_on_hover = false
card_layout_strategy = SubResource("Resource_eiu4o")

[node name="HandCardCollection" parent="OpponentDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -11.498, 0)
script = ExtResource("12_ueicy")
card_layout_strategy = SubResource("Resource_qk52r")

[node name="InPlayCardCollection" parent="OpponentDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.56442e-07, -2.24751, 2)
card_layout_strategy = SubResource("Resource_aua20")

[node name="OpponentEmptyDeck" parent="OpponentDragController" instance=ExtResource("15_k6ux7")]
transform = Transform3D(-1, 3.82137e-15, 8.74228e-08, 8.74228e-08, 4.37114e-08, 1, 0, 1, -4.37114e-08, -19.114, -8.721, -0.465)
visible = false
skeleton = NodePath("../..")

[node name="CharacterDragController" type="Node3D" parent="."]
script = ExtResource("8_156m4")

[node name="OutOfPlayCharacterCollection" parent="CharacterDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.08, 2.31, -1.09)
card_layout_strategy = SubResource("Resource_rns6f")

[node name="CharacterDeckCollection" parent="CharacterDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.94139, 0, 0)
card_layout_strategy = SubResource("Resource_n1c4l")

[node name="CharacterDrawnCollection" parent="CharacterDragController" instance=ExtResource("9_pyfix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.56137, 0, 0)
card_layout_strategy = SubResource("Resource_x1qku")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999743, -0.00256828, -0.0225415, 0, 0.993572, -0.113203, 0.0226873, 0.113174, 0.993316, 0, -2.59, 15.385)

[connection signal="pressed" from="HUD/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="card_clicked" from="PlayerDragController/DeckCardCollection" to="." method="_on_deck_card_collection_card_clicked"]
[connection signal="card_clicked" from="OpponentDragController/DeckCardCollection" to="." method="_on_opponent_deck_card_collection_card_clicked"]
